# moleculenet-zero

./: README.md  pyproject.toml
src/mnz/: __init__.py  graph.py  layers.py
tests/: test_graph.py
