[project]
name = "mnz"
version = "0.1.0"
description = "A graph neural network from scratch in pure NumPy, trained on molecular property prediction."
readme = "README.md"
authors = [
    { name = "Will Sobolewski", email = "wcsobo7@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.0",
    "rdkit>=2024.3",
    "tqdm>=4.66",
]

[project.scripts]
mnz = "mnz:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "pre-commit>=3.8",
    "ipykernel>=6.29",
    "matplotlib>=3.9",
]

[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "UP",
    "NPY",
]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true